# forgecode

./: Cargo.toml  package.json
crates/artemis_api/: Cargo.toml
crates/artemis_api/src/: api.rs  artemis_api.rs  lib.rs
crates/artemis_app/: Cargo.toml
crates/artemis_app/src/: agent.rs  agent_executor.rs  agent_provider_resolver.rs  app.rs  apply_tunable_parameters.rs  changed_files.rs  command_generator.rs  compact.rs  data_gen.rs  error.rs  file_tracking.rs  git_app.rs  infra.rs  init_conversation_metrics.rs  lib.rs  mcp_executor.rs  operation.rs  orch.rs  retry.rs  search_dedup.rs  services.rs  set_conversation_id.rs  system_prompt.rs  template_engine.rs  terminal_context.rs  title_generator.rs  tool_executor.rs  tool_registry.rs  tool_resolver.rs  user_prompt.rs  utils.rs  workspace_status.rs
crates/artemis_app/src/dto/: tools_overview.rs
crates/artemis_app/src/dto/anthropic/: request.rs  response.rs
crates/artemis_app/src/dto/anthropic/transforms/: auth_system_message.rs  capitalize_tool_names.rs  enforce_schema.rs  (+5 more)
crates/artemis_app/src/dto/google/: request.rs  response.rs
crates/artemis_app/src/dto/openai/: model.rs  request.rs  response.rs  tool_choice.rs
crates/artemis_app/src/fmt/: content.rs  fmt_input.rs  fmt_output.rs  todo_fmt.rs
crates/artemis_app/src/fmt/snapshots/: artemis_app__fmt__fmt_output__tests__fs_patch_success.snap  artemis_app__fmt__todo_fmt__tests__todo_write_mixed_changes_snapshot.snap  artemis_app__fmt__todo_fmt__tests__todo_write_removed_in_progress_renders_with_in_progress_icon_in_raw_snapshot.snap  artemis_app__fmt__todo_fmt__tests__todo_write_removed_pending_renders_with_pending_icon_in_raw_snapshot.snap
crates/artemis_app/src/hooks/: compaction.rs  doom_loop.rs  pending_todos.rs  title_generation.rs  tracing.rs
crates/artemis_app/src/orch_spec/: orch_runner.rs  orch_setup.rs  orch_spec.rs  orch_system_spec.rs
crates/artemis_app/src/orch_spec/snapshots/: artemis_app__orch_spec__orch_system_spec__system_prompt.snap  artemis_app__orch_spec__orch_system_spec__system_prompt_tool_supported.snap  artemis_app__orch_spec__orch_system_spec__system_prompt_with_extensions.snap  artemis_app__orch_spec__orch_system_spec__system_prompt_with_extensions_truncated.snap
crates/artemis_app/src/snapshots/: artemis_app__changed_files__tests__multiple_files_changed.snap  artemis_app__command_generator__tests__generate_simple_command.snap  artemis_app__command_generator__tests__generate_with_no_files.snap  artemis_app__compact__tests__render_summary_frame_snapshot-2.snap  artemis_app__compact__tests__render_summary_frame_snapshot.snap  artemis_app__compact__tests__template_engine_renders_summary_frame.snap  artemis_app__compact__tests__template_engine_renders_todo_write.snap  artemis_app__operation__tests__follow_up_no_question.snap  artemis_app__operation__tests__follow_up_with_question.snap  artemis_app__operation__tests__fs_create_basic.snap  artemis_app__operation__tests__fs_create_overwrite.snap  artemis_app__operation__tests__fs_create_with_warning.snap  artemis_app__operation__tests__fs_create_with_warning_xml_tags.snap  artemis_app__operation__tests__fs_patch_basic.snap  artemis_app__operation__tests__fs_patch_with_warning.snap  artemis_app__operation__tests__fs_patch_with_warning_special_chars.snap  artemis_app__operation__tests__fs_read_basic.snap  artemis_app__operation__tests__fs_read_basic_special_chars.snap  artemis_app__operation__tests__fs_read_with_explicit_range.snap  artemis_app__operation__tests__fs_read_with_truncation_path.snap  artemis_app__operation__tests__fs_remove_success.snap  artemis_app__operation__tests__fs_search_case_insensitive.snap  artemis_app__operation__tests__fs_search_count_mode.snap  artemis_app__operation__tests__fs_search_files_with_matches_mode.snap  artemis_app__operation__tests__fs_search_max_output.snap  artemis_app__operation__tests__fs_search_min_lines_but_max_line_length.snap  artemis_app__operation__tests__fs_search_multiline_pattern.snap  artemis_app__operation__tests__fs_search_no_matches.snap  artemis_app__operation__tests__fs_search_no_results.snap  artemis_app__operation__tests__fs_search_output.snap  artemis_app__operation__tests__fs_search_very_lengthy_one_line_match.snap  artemis_app__operation__tests__fs_search_with_after_context.snap  artemis_app__operation__tests__fs_search_with_before_context.snap  artemis_app__operation__tests__fs_search_with_context_lines.snap  artemis_app__operation__tests__fs_search_with_file_type.snap  artemis_app__operation__tests__fs_search_with_offset.snap  artemis_app__operation__tests__fs_search_with_results.snap  artemis_app__operation__tests__fs_search_without_line_numbers.snap  artemis_app__operation__tests__fs_undo_file_created.snap  artemis_app__operation__tests__fs_undo_file_removed.snap  (+22 more)
crates/artemis_app/src/transformers/: compaction.rs  dedupe_role.rs  drop_role.rs  strip_working_dir.rs  trim_context_summary.rs
crates/artemis_main/: Cargo.toml
crates/artemis_main/src/: banner  banner.rs  cli.rs  conversation_selector.rs  editor.rs  info.rs  input.rs  lib.rs  main.rs  model.rs  oauth_callback.rs  porcelain.rs  prompt.rs  sandbox.rs  state.rs  stream_renderer.rs  sync_display.rs  title_display.rs  tools_display.rs  tracker.rs  ui.rs  update.rs  vscode.rs
crates/artemis_main/src/completer/: command.rs  input_completer.rs
crates/artemis_main/src/zsh/: plugin.rs  rprompt.rs
crates/artemis_services/: Cargo.toml
crates/artemis_services/src/: agent_registry.rs  app_config.rs  artemis_services.rs  attachment.rs  auth.rs  command.rs  context_engine.rs  conversation.rs  discovery.rs  fd.rs  fd_git.rs  fd_walker.rs  instructions.rs  lib.rs  policy.rs  provider_auth.rs  provider_service.rs  sync.rs  template.rs
crates/artemis_services/src/mcp/: manager.rs  service.rs  tool.rs
crates/artemis_services/src/tool_services/: fetch.rs  followup.rs  fs_patch.rs  fs_read.rs  fs_remove.rs  fs_search.rs  fs_undo.rs  fs_write.rs  image_read.rs  plan_create.rs  shell.rs  skill.rs
crates/artemis_snaps/: Cargo.toml
crates/artemis_snaps/src/: service.rs
(+189 files in other folders)
