[package]
name = "artemis_api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
url.workspace = true
async-trait.workspace = true
artemis_domain.workspace = true
artemis_stream.workspace = true
artemis_services.workspace = true
artemis_repo.workspace = true
artemis_infra.workspace = true
futures.workspace = true








artemis_app.workspace = true
serde_json.workspace = true
artemis_config.workspace = true

[dev-dependencies]

tokio = { workspace = true }


