[package]
name = "artemis_main"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "artemis"
path = "src/main.rs"


[dependencies]
thiserror = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
artemis_app.workspace = true
artemis_api.workspace = true
artemis_domain.workspace = true
artemis_config.workspace = true
artemis_walker.workspace = true
artemis_display.workspace = true
artemis_tracker.workspace = true

artemis_spinner.workspace = true
artemis_select.workspace = true

merge.workspace = true
artemis_fs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
colored.workspace = true

anyhow.workspace = true
derive_setters.workspace = true
lazy_static.workspace = true
reedline.workspace = true
crossterm = "0.29.0"
nu-ansi-term.workspace = true
tracing.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
toml_edit.workspace = true
strum.workspace = true
strum_macros.workspace = true

convert_case.workspace = true
gix.workspace = true
update-informer = { version = "1.2.0", default-features = false, features = [
    "github",
    "ureq",
    "rustls-tls",
] }
dirs.workspace = true
open.workspace = true
humantime.workspace = true
num-format.workspace = true
atty = "0.2"
url.workspace = true
artemis_embed.workspace = true
include_dir.workspace = true
indexmap.workspace = true
async-recursion.workspace = true

artemis_markdown_stream.workspace = true
strip-ansi-escapes.workspace = true
terminal_size = "0.4"
rustls.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

[target.'cfg(windows)'.dependencies]
enable-ansi-support.workspace = true
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
insta.workspace = true
pretty_assertions.workspace = true
serial_test = "3.4"
fake = { version = "5.1.0", features = ["derive"] }
artemis_domain = { path = "../artemis_domain" }
