[package]
name = "artemis_services"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
async-stream.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
artemis_snaps.workspace = true
artemis_stream.workspace = true
serde.workspace = true
serde_json.workspace = true
derive_setters.workspace = true
tokio-stream.workspace = true
handlebars.workspace = true
artemis_fs.workspace = true
dashmap.workspace = true
anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
derive_more.workspace = true
regex.workspace = true
backon.workspace = true
humantime.workspace = true
thiserror.workspace = true
html2md.workspace = true
glob.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
ignore.workspace = true
base64.workspace = true
strum_macros.workspace = true
strum.workspace = true
bytes.workspace = true
serde_yml.workspace = true
gray_matter.workspace = true
merge.workspace = true
strip-ansi-escapes.workspace = true
artemis_app.workspace = true
url.workspace = true
reqwest-eventsource.workspace = true
lazy_static = "1.5.0"
artemis_domain.workspace = true
artemis_config.workspace = true
oauth2 = { version = "5.0", features = ["reqwest"] }
serde_urlencoded = "0.7.1"
http.workspace = true
infer.workspace = true
uuid.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
pretty_assertions.workspace = true
tempfile.workspace = true
fake = { version = "5.1.0", features = ["derive"] }
artemis_test_kit.workspace = true


